fix #1198 [bug fix] Fix tree list collapse (#1199)

--- a/src/client/components/setting-panel/list.styl
+++ b/src/client/components/setting-panel/list.styl
@@ -1,5 +1,4 @@
 .item-list-wrap
-  max-height 500px
   overflow-y scroll
   &::-webkit-scrollbar
     width 0
